# cyclops

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  cyclops.bat  overlay.bat
configs/: monitor.squall.json
configs/examples/: monitor.blaster.json  monitor.brute.json  monitor.defender.json  monitor.doninator.json  monitor.night.widow.json  monitor.soldier.json
migrations/2024-02-26-122022_create_summaries/: down.sql  up.sql
resources/: boss_hp_table.csv  cyclops.css  cyclops.js  lieutenant_hp_table.csv  minion_hp_table.csv  normalization.csv  pseudo_pets.csv  sim_hit_powers.csv
schema-export/: schema.sql
src/: args.rs  damage_by_power_table.rs  damage_taken_by_mob_power_table.rs  damage_taken_by_type_table.rs  db_actions.rs  dps_interval_table.rs  index_handler.rs  log_processing.rs  main.rs  models.rs  parser_model.rs  parsers.rs  player_summary_table.rs  power.rs  powers_and_mobs_table.rs  reports.rs  schema.rs  web.rs
src/db/: event_processing.rs  mod.rs  queries.rs
src/game_data/: mod.rs
src/log_processing/: mod.rs  parser_model.rs  parsers.rs
src/monitoring/: mod.rs  monitor_structs.rs
src/overlay/: mod.rs
src/web/: damage_by_power_table.rs  damage_dealt_by_type_table.rs  damage_taken_by_mob_power_table.rs  damage_taken_by_mob_table.rs  damage_taken_by_type_table.rs  dps_interval_table.rs  index_handler.rs  mod.rs  player_summary_table.rs  powers_and_mobs_table.rs  web_structs_enums.rs
templates/: damage_by_power.html  index.html  index_actions.html  index_table.html  job_result.html  job_start.html  messages.html  monitor.html  monitor_config.html  player_attack_report.html  powers_and_mobs_table.html  simple_table.html  summary.html
testdata/: chatlog 2024-01-25.txt
