[package]
name = "cyclops"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1"
natord = "1.0.9"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
regex = "1.10.3"
chrono = "0.4.33"
csv = "1.3.0"
clap = { version = "4.4.18", features = ["derive"] }
current_platform = "0.2.0"
diesel = { version = "2.1.0", features = [
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
] }
dotenvy = "0.15"
