[package]
name = "cyclops"
version = "1.4.0"
repository.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["egui_default", "glfw_default", "three_d"]
egui_default = ["egui/default"]
glfw_default = ["egui_window_glfw_passthrough/default"]
three_d = ["dep:egui_render_three_d"]
wgpu = ["dep:egui_render_wgpu"]

[dependencies]
dotenvy = "0.15"
tera = "1"
natord = "1.0.9"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
regex = "1.10.3"
chrono = "0.4.33"
csv = "1.3.0"
clap = { version = "4.4.18", features = ["derive"] }
current_platform = "0.2.0"
diesel = { version = "2.1.0", features = [
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
diesel_migrations = "2.1.0"
actix-web = "4"
actix-files = "0.6.5"
walkdir = "2"
dunce = "1.0.4"
serde_qs = "0.13.0"
strsim = "0.11.1"
# Overlay specific
egui_window_glfw_passthrough = { version = "0.9", path = "crates/egui_window_glfw_passthrough", default-features = false }
egui = { workspace = true }
tracing = { workspace = true }
raw-window-handle = { workspace = true }
egui_render_three_d = { version = "0.9", path = "crates/egui_render_three_d", optional = true }
# because opengl doesn't work on mac :((
egui_render_wgpu = { version = "0.9", path = "crates/egui_render_wgpu", optional = true }
egui_overlay = "0.9"
tracing-subscriber = "0.3.19"
num-format = "0.4.4"

[workspace.dependencies]
egui = { version = "0.29", default-features = false }
bytemuck = { version = "1", default-features = false }
tracing = { version = "0.1", default-features = false }
raw-window-handle = { version = "0.6" }
egui_render_three_d = { version = "0.9", path = "crates/egui_render_three_d" }
egui_render_wgpu = { version = "0.9", path = "crates/egui_render_wgpu" }
egui_window_glfw_passthrough = { version = "0.9", path = "crates/egui_window_glfw_passthrough" }

[workspace]
members = [
    "crates/egui_render_three_d",
    "crates/egui_render_glow",
    "crates/egui_render_wgpu",
    "crates/egui_window_glfw_passthrough",
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.9.0"
repository = "https://github.com/PaulBenHill/cyclops"
